<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="loginVM" type="com.yudhaaryosapplication.app.modules.login.data.viewmodel.LoginVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearIPhone8Twel"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <TextView android:ellipsize="end" android:id="@+id/txtLaba"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12pxh"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_51pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{loginVM.loginModel.txtLaba}"
            style="@style/txtPoppinssemibold49_1" tools:text="@string/lbl_laba"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtOlahragaBareng"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12pxh"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{loginVM.loginModel.txtOlahragaBareng}"
            style="@style/txtPoppinslight12" tools:text="@string/lbl_olahraga_bareng"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtLogintoyoura"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_76pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{loginVM.loginModel.txtLogintoyoura}"
            style="@style/txtPoppinsregular15" tools:text="@string/msg_login_to_your_a"/>
        <EditText
            android:background="@drawable/rectangle_border_black_900_radius_18"
            android:ellipsize="end" android:hint="@string/lbl_email"
            android:id="@+id/edt_email_login"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12pxh"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_20pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_14pxh"
            android:paddingTop="@dimen/_19pxv" android:singleLine="true"
            android:text="@={loginVM.loginModel.etFrameOneValue}"
            android:textColorHint="@color/black_900"
            style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_border_black_900_radius_18"
            android:ellipsize="end" android:hint="@string/lbl_password"
            android:id="@+id/edt_password_login"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12pxh"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_17pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_20pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_14pxh"
            android:paddingTop="@dimen/_19pxv" android:singleLine="true"
            android:text="@={loginVM.loginModel.etFrameThreeValue}"
            android:textColorHint="@color/black_900"
            style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        <TextView
            android:id="@+id/tv_to_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register Here"
            android:textAlignment="center"
            android:textColor="@color/black_900"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginTop="30dp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnLogin"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12pxh"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_238pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_10pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_10pxv" android:singleLine="true"
            android:text="@string/lbl_login" android:textAllCaps="false"
            style="@style/btnSolidRounded_1" tools:text="@string/lbl_login"/>
        <LinearLayout android:gravity="center_vertical"
            android:id="@+id/linearSigningoogle"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12pxh"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStylewhite_A700cornerRadius">
            <ImageView android:id="@+id/imageGoogle"
                android:layout_height="@dimen/_29pxh"
                android:layout_marginBottom="@dimen/_9pxv"
                android:layout_marginStart="@dimen/_56pxh"
                android:layout_marginTop="@dimen/_6pxv"
                android:layout_width="@dimen/_29pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_google"
                tools:ignore="ContentDescription" tools:src="@drawable/img_google"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtOrSignInWith"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_9pxv"
                android:layout_marginEnd="@dimen/_57pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_weight="0.86" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{loginVM.loginModel.txtOrSignInWith}"
                style="@style/txtPoppinsregular16" tools:text="@string/msg_or_sign_in_with"/>
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical"
            android:id="@+id/linearRowlanguage"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_44pxv"
            android:layout_marginEnd="@dimen/_12pxh"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_23pxv"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <TextView android:ellipsize="end"
                android:id="@+id/txtLanguage"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_weight="0.73" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{loginVM.loginModel.txtLanguage}"
                style="@style/txtPoppinsregular15" tools:text="@string/msg_dont_have_accou"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtSignUp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.27" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{loginVM.loginModel.txtSignUp}"
                style="@style/txtPoppinsregular15_1" tools:text="@string/lbl_sign_up"/>
        </LinearLayout>
    </LinearLayout>
</layout>
