<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="registerVM" type="com.yudhaaryosapplication.app.modules.register.data.viewmodel.RegisterVM"/>
    </data>
    <LinearLayout android:id="@+id/linearIPhone8Two"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <FrameLayout android:id="@+id/frameStackolahragabareng"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_81pxv"
            android:layout_marginEnd="@dimen/_12pxh"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_51pxv" android:layout_width="@dimen/_123pxh">
            <TextView android:ellipsize="end"
                android:gravity="top|start"
                android:id="@+id/txtOlahragaBareng"
                android:layout_gravity="bottom|center"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{registerVM.registerModel.txtOlahragaBareng}"
                style="@style/txtPoppinslight12" tools:text="@string/lbl_olahraga_bareng"/>
            <TextView android:ellipsize="end"
                android:gravity="top|start" android:id="@+id/txtLaba"
                android:layout_gravity="top|start"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{registerVM.registerModel.txtLaba}"
                style="@style/txtPoppinssemibold49_1" tools:text="@string/lbl_laba"/>
        </FrameLayout>
        <TextView android:ellipsize="end" android:id="@+id/txtLanguage"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_29pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{registerVM.registerModel.txtLanguage}"
            style="@style/txtPoppinsregular15" tools:text="@string/msg_create_your_acc"/>
        <ImageView android:id="@+id/imageUser"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_70pxh"
            android:layout_marginEnd="@dimen/_12pxh"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_11pxv"
            android:layout_width="@dimen/_70pxh"
            android:scaleType="fitXY" android:src="@drawable/img_user"
            tools:ignore="ContentDescription" tools:src="@drawable/img_user"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtSelectimages"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12pxh"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{registerVM.registerModel.txtSelectimages}"
            style="@style/txtPoppinsregular15_2" tools:text="@string/lbl_select_images"/>

        <EditText
            android:background="@drawable/rectangle_border_black_900_radius_18"
            android:ellipsize="end" android:hint="@string/lbl_email"
            android:id="@+id/edt_email_register"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12pxh"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_20pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_14pxh"
            android:paddingTop="@dimen/_19pxv" android:singleLine="true"
            android:text="@={registerVM.registerModel.etFrameOneValue}"
            android:textColorHint="@color/black_900"
            style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_border_black_900_radius_18"
            android:ellipsize="end" android:hint="@string/lbl_password"
            android:id="@+id/edt_password_register"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12pxh"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_20pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_14pxh"
            android:paddingTop="@dimen/_19pxv" android:singleLine="true"
            android:text="@={registerVM.registerModel.etFrameThreeValue}"
            android:textColorHint="@color/black_900"
            style="@style/etRoundedOutline" tools:ignore="Autofill"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            style="@style/btnSolidRounded_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_106pxv"
            android:layout_marginEnd="@dimen/_12pxh"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_10pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingBottom="@dimen/_10pxv"
            android:singleLine="true"
            android:text="@string/lbl_sign_up"
            android:textAllCaps="false"
            tools:text="@string/lbl_sign_up" />

        <LinearLayout android:gravity="center_vertical"
            android:id="@+id/linearSigningoogle"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12pxh"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStylewhite_A700cornerRadius">
            <ImageView android:id="@+id/imageGoogle"
                android:layout_height="@dimen/_29pxh"
                android:layout_marginBottom="@dimen/_9pxv"
                android:layout_marginStart="@dimen/_56pxh"
                android:layout_marginTop="@dimen/_6pxv"
                android:layout_width="@dimen/_29pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_google"
                tools:ignore="ContentDescription" tools:src="@drawable/img_google"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtOrSignInWith"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_9pxv"
                android:layout_marginEnd="@dimen/_57pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_weight="0.86" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{registerVM.registerModel.txtOrSignInWith}"
                style="@style/txtPoppinsregular16" tools:text="@string/msg_or_sign_in_with"/>
        </LinearLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearRowlanguageOne"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_44pxv"
            android:layout_marginEnd="@dimen/_78pxh"
            android:layout_marginStart="@dimen/_78pxh"
            android:layout_marginTop="@dimen/_23pxv"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <TextView android:ellipsize="end"
                android:id="@+id/txtLanguageOne"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_weight="0.69" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{registerVM.registerModel.txtLanguageOne}"
                style="@style/txtPoppinsregular15" tools:text="@string/lbl_have_account"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtSignIn"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.31" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{registerVM.registerModel.txtSignIn}"
                style="@style/txtPoppinsregular15_1" tools:text="@string/lbl_sign_in"/>
        </LinearLayout>
    </LinearLayout>
</layout>
